fix: some minor changes

--- a/src/Components/Product/products.css
+++ b/src/Components/Product/products.css
@@ -41,6 +41,10 @@ input[type="checkbox"] {
   gap: 1rem;
   margin-bottom: 5rem;
 }
+.product-card {
+  box-shadow: 0 0 0.4rem var(--txt-gray);
+}
+
 .card-badge {
   left: 0%;
   top: 2%;
@@ -55,10 +59,7 @@ input[type="checkbox"] {
   border-bottom-right-radius: 1rem;
   border-top-left-radius: 1rem;
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   padding: 1rem;
   background-color: rgb(230, 230, 230, 0.6);
 }
@@ -83,7 +84,7 @@ input[type="checkbox"] {
   position: absolute;
   top: 10px;
   right: 9px;
-  color: var(--bgFailure);
+  color: var(--theme-color);
 }
 
 /* overriding styles */
