--- a/src/Components/Cart/cart.css
+++ b/src/Components/Cart/cart.css
@@ -5,6 +5,7 @@
 }
 .cart-category {
   justify-content: center;
+  flex-wrap: wrap;
   margin-bottom: 5rem;
 }
 /* different cards category */
@@ -19,7 +20,7 @@
   padding-bottom: 1rem;
   min-width: 20rem;
   border: none;
-  box-shadow: 0 0 2px rgb(80, 80, 80);
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.37);
   justify-content: space-around;
 }
 .card-horizontal .card-img {
@@ -52,10 +53,10 @@
 }
 /* cart page checkout category */
 .cart-price {
-  width: 25%;
+  min-width: 23rem;
   height: fit-content;
   background-color: var(--txt-white);
-  box-shadow: 0 0 3px var(--txt-gray);
+  box-shadow: 0 0 2px var(--txt-gray);
 }
 .flex-between {
   display: flex;
