--- a/src/Utils/utilities.css
+++ b/src/Utils/utilities.css
@@ -1,33 +1,36 @@
-.bg-radient{
-    background-color:var(--bg-radient);
+.bg-radient {
+  background-color: var(--bg-radient);
 }
-.bg-theme{
-    background-color: var(--theme-color);
+.bg-theme {
+  background-color: var(--theme-color);
 }
-.txt-theme{
-    color:var(--theme-color);
+.txt-theme {
+  color: var(--theme-color);
 }
-.txt-gray{
-    color:var(--txt-gray);
+.txt-gray {
+  color: var(--txt-gray);
 }
-.txt-white{
-    color:var(--txt-white);
+.txt-white {
+  color: var(--txt-white);
 }
-.theme-shade-2{
-    color:var(--theme-shade-2);
+.theme-shade-2 {
+  color: var(--theme-shade-2);
 }
-.bg-theme-shade-2{
-    background-color: var(--theme-shade-2);
+.bg-theme-shade-2 {
+  background-color: var(--theme-shade-2);
 }
-.l-height-lg{
-    line-height: 1.5;
+.l-height-lg {
+  line-height: 1.5;
 }
-.bd-bottom{
-    border-bottom: 2px solid var(--theme-color);
+.bd-bottom {
+  border-bottom: 2px solid var(--theme-color);
 }
-.l-through{
-    text-decoration: line-through;
+.l-through {
+  text-decoration: line-through;
 }
-.txt-normal{
-    font-weight:normal;
+.txt-normal {
+  font-weight: normal;
+}
+.pos-relative {
+  position: relative;
 }
