--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -4,6 +4,9 @@
   margin-bottom: 10rem;
   margin-top: 2rem;
 }
+.intro-heading {
+  font-family: "Abril Fatface", cursive;
+}
 
 .intro-container > a:hover {
   font-size: 1rem;
@@ -19,4 +22,8 @@
 }
 .featured-category .link:hover {
   transform: scale(1.1);
+}
+.home-image {
+  min-width: 50%;
+  filter: drop-shadow(7px 7px 7px var(--txt-gray));
 }
