--- a/src/Components/Product/products.css
+++ b/src/Components/Product/products.css
@@ -11,19 +11,24 @@
 /* filter list  styling*/
 .filter-list {
   padding: 1rem;
-  height: calc(100vh - 6rem);
+  height: calc(100vh - 2rem);
   overflow: scroll;
   position: sticky;
-  top: 9%;
+  top: 6%;
   left: 1%;
-  border: 1px solid var(--border-shade);
-  border-right-color: var(--theme-shade-3);
-  border-left: unset;
+  border: none;
+  border-right: 1px solid rgba(0, 0, 0, 0.25);
+  /* border-right-color: var(--theme-shade-3); */
+  /* border-left: unset;
+  border-top: unset; */
 }
 .btn-clear {
-  padding: 4px;
+  align-self: center;
+  padding: 0px;
   letter-spacing: 0.8px;
-  float: right;
+  border: none;
+  font-size: 1.2rem;
+  border-bottom: 1px solid red;
 }
 input[type="radio"],
 input[type="checkbox"] {
@@ -34,17 +39,29 @@ input[type="checkbox"] {
   padding: 1rem;
   gap: 0.5rem;
 }
-
+.filter-header {
+  justify-content: space-between;
+}
+.range-slider {
+  height: 0.4rem;
+}
 /* products styling */
 .products-list {
+  justify-content: center;
   flex-wrap: wrap;
   gap: 1rem;
   margin-bottom: 5rem;
 }
-.product-card {
+/* .product-card {
   box-shadow: 0 0 0.4rem var(--txt-gray);
+} */
+.product-list-header {
+  background-color: rgba(0, 0, 0, 0.08);
+  font-size: 1.1rem;
+  padding: 10px;
+  margin: 1.2rem 0;
+  max-width: 25rem;
 }
-
 .card-badge {
   left: 0%;
   top: 2%;
@@ -86,7 +103,17 @@ input[type="checkbox"] {
   right: 9px;
   color: var(--theme-color);
 }
-
+.filter-btn {
+  display: none;
+}
+.filter-list > div {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+.price-range-header {
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.3rem;
+}
 /* overriding styles */
 .products-category-box .title {
   margin: 0rem auto;
@@ -98,9 +125,6 @@ input[type="checkbox"] {
   max-height: 10rem;
   margin-top: 1rem;
 }
-.bd-bottom {
-  border-bottom: 1px solid var(--theme-shade-3);
-}
 
 /* filter list scrollbar */
 .filter-list::-webkit-scrollbar-thumb {
@@ -111,5 +135,36 @@ input[type="checkbox"] {
   background: var(--theme-shade-3);
 }
 .filter-list::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 0.39rem;
+}
+.filter-list::-webkit-scrollbar {
+  width: 0.39rem;
+}
+
+@media screen and (max-width: 768px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+  }
+  .filter-list {
+    position: fixed;
+    left: -100%;
+    top: 0;
+    height: 100vh;
+    background-color: var(--txt-white);
+  }
+  .filter-btn {
+    display: block;
+  }
+  .active-filter-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 3;
+    background-color: rgb(0, 0, 0, 0.2);
+  }
+  .active-filter-container .filter-list {
+    left: 0;
+  }
 }
