--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url("./Utils/utilities.css");
-
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Rubik+Glitch&family=Rubik+Wet+Paint&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Nunito&family=Permanent+Marker&family=Poppins&family=Rowdies&display=swap");
 :root {
   --bg-radient: radial-gradient(#fff, #ffd6d6);
   --theme-color: #ff523b;
@@ -12,6 +13,15 @@
 
 .App {
   height: 100vh;
+}
+* {
+  /* font-family: 'Rubik Glitch', cursive; */
+  /*   
+  font-family: "Rubik Wet Paint", cursive; */
+
+  /* font-family: "Poppins", sans-serif; */
+  /* font-family: "Nunito", sans-serif; */
+  /* font-family: "Abril Fatface", cursive; */
 }
 
 /* for heading with highlighted underline */
@@ -34,12 +44,17 @@
 
 /* overriding style from component library */
 
-.card {
+.card,
+.card-horizontal {
   padding: 0;
-  box-shadow: 0 0 0.8rem var(--txt-gray);
+  box-shadow: 0 0 2px var(--txt-gray);
+  background-color: var(--txt-white);
   border: none;
 }
-
+h2,
+h3 {
+  margin: 0;
+}
 .badge-icon {
   font-size: 0.6rem;
   padding: 2px 5px;
@@ -59,7 +74,7 @@
 }
 .rating-block {
   padding: 2px 7px;
-  border-radius: 14px;
+  border-radius: 8px;
   font-size: 0.8rem;
   vertical-align: baseline;
 }
@@ -71,7 +86,10 @@
 .main-container {
   min-height: 80vh;
 }
-
+input:focus {
+  border: 2px solid var(--theme-color) !important;
+  /* outline: 1px solid var(--theme-color) !important; */
+}
 /* body scrollbar */
 body::-webkit-scrollbar-thumb {
   background-color: var(--theme-color);
@@ -82,4 +100,10 @@ body::-webkit-scrollbar-thumb:hover {
 }
 body::-webkit-scrollbar {
   width: 0.5rem;
+}
+
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 14px;
+  }
 }
