--- a/src/Components/Wishlist/wishlist.css
+++ b/src/Components/Wishlist/wishlist.css
@@ -6,6 +6,7 @@
 }
 
 .btn-dismiss:hover {
-  color: var(--theme-color);
-  font-weight: bold;
+  /* color: var(--theme-color);
+  font-weight: bold; */
+  font-size: 1.4rem;
 }
