--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url("./Utils/utilities.css");
-@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Rubik+Glitch&family=Rubik+Wet+Paint&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Nunito&family=Permanent+Marker&family=Poppins&family=Rowdies&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Comfortaa:wght@700&family=Rowdies:wght@300&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Nunito&family=Permanent+Marker&family=Poppins&family=RowdieNinis&display=swap"); */
 :root {
   --bg-radient: radial-gradient(#fff, #ffd6d6);
   --theme-color: #ff523b;
@@ -13,15 +13,6 @@
 
 .App {
   height: 100vh;
-}
-* {
-  /* font-family: 'Rubik Glitch', cursive; */
-  /*   
-  font-family: "Rubik Wet Paint", cursive; */
-
-  /* font-family: "Poppins", sans-serif; */
-  /* font-family: "Nunito", sans-serif; */
-  /* font-family: "Abril Fatface", cursive; */
 }
 
 /* for heading with highlighted underline */
@@ -79,16 +70,24 @@ h3 {
   vertical-align: baseline;
 }
 .btn-dismiss {
+  background-color: unset;
+  color: var(--theme-color);
+  font-weight: bold;
+  font-size: 1.3rem;
   border: none;
-  top: -10px;
-  right: -9px;
+  top: -9px;
+  right: -5px;
 }
 .main-container {
   min-height: 80vh;
 }
+.empty-products {
+  font-size: 1.6rem;
+  margin-top: 6rem;
+  color: var(--txt-gray);
+}
 input:focus {
   border: 2px solid var(--theme-color) !important;
-  /* outline: 1px solid var(--theme-color) !important; */
 }
 /* body scrollbar */
 body::-webkit-scrollbar-thumb {
